	 the keyboard (space) is used to select things from a GtkCList
	 (Darren).
20040407 joystick.[ch]: add emulation of the two Sinclair-type joysticks.
20040408 input.c,keyboard.[ch],keysyms.pl: use hash tables rather than
	 linear lookup to do the three levels of keyboard remapping.
20040408 ui/gtk/debugger.c: add a simple memory map pane.
20040409 memory.h,snapshot.c,utils.c,machines/{pentagon.c,scorpion.c,
	 spec128.c,spec16.c,spec48.c,specplus3.c,tc2048.c,tc2068.c},
	 ui/gtk/debugger.c,z80/z80_ops.c: add the beginnings of code to
	 allow breakpoints to be set on pages other than RAM (eg ROM,
	 DOCK, EXROM).
20040409 ui/gtk/debugger.c: add indications of whether a chunk is writable
	 and/or contended to the memory map pane.
20040409 machines/tc2068.c: #include <string.h> for memset.
20040410 ui/gtk/browse.c: #include <string.h> for strcpy.
20040111 Revamp of menu system to share code between the GTK+ and widget
	 implementations (patch #931017).
20040411 compat.h,debugger/expression.c,fuse.[ch],input.c,joystick.c,
	 nullsound.c,tape.c,utils.c,widget/menu.c: declare fuse_abort()
	 to never return and remove the 'keep gcc happy' bits this
	 assumption makes unnecessary.
20040411 menu.c,menu_data.c,settings-header.pl,settings.pl: allow the
	 +3e ROMs to be selected from the user interfaces.
20040413 menu_data.pl: Perl 5.6 fixup.
20040415 tape.c: when loading a block via the tape traps, we must have at
	 least DE + 2 bytes due to the flag and parity bytes.
20040415 tape.c: after successfully loading a block with tape traps, set
	 DE equal to zero as this is what happens in the ROM code.
	 Necessary for 'The Rats' to load with tape traps enabled; thanks
	 to Simon Stuart for reporting this (fixes bug #890838).
20040415 menu_data.pl,widget/{menu.c,widget.h}: fix up widget compilation
	 of the new menu code.
20040415 menu.[ch],rzx.[ch],ui/gtk/{binary.c,fileselector.c,gtkinternals.h,
	 gtkui.c,roms.c},widget/menu.c: generalise more functions into
	 menu.c (GTK+ changes).